--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
-REACT_APP_NCWMS_URL=https://services.pacificclimate.org/marmot/ncwms
+REACT_APP_NCWMS_URL=http://www.plan2adapt.ca/ncWMS/wms
