--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
@@ -17,7 +18,8 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "react-select": "^2.2.0"
+    "react-select": "^2.2.0",
+    "xml-js": "^1.6.9"
   },
   "scripts": {
     "start": "react-scripts start",
