--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "bootstrap": "^3.3.7",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
-    "pcic-react-components": "git+ssh://git@github.com/pacificclimate/pcic-react-components.git#1.1.1",
+    "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#1.1.1",
     "proj4": "^2.5.0",
     "proj4leaflet": "^1.0.2",
     "prop-types": "^15.6.2",
