Update page title, favicon, manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Plan2Adapt",
+  "name": "PCIC Plan2Adapt, Version 2",
   "icons": [
     {
       "src": "favicon.ico",
