--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.3.1",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
     "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#1.1.1",
@@ -13,7 +13,7 @@
     "proj4leaflet": "^1.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.7.0",
     "react-leaflet": "^2.1.4",
     "react-scripts": "^2.1.8",
