--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
     "bootstrap": "^4.3.1",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
-    "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#1.1.1",
+    "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#3.0.0",
     "pcic-react-leaflet-components": "git+https://git@github.com/pacificclimate/pcic-react-leaflet-components.git",
     "proj4": "^2.5.0",
     "proj4leaflet": "^1.0.2",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.6",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.6",
+    "react-icons": "^3.5.0",
     "react-leaflet": "^2.1.4",
     "react-scripts": "^2.1.8",
-    "react-select": "^2.2.0",
+    "react-select": "^2.3.0",
     "xml-js": "^1.6.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "refresh": "rm -rf ./node_modules; npm install"
   },
   "eslintConfig": {
     "extends": "react-app"
