--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
 REACT_APP_NCWMS_URL=http://www.plan2adapt.ca/ncWMS/wms
-REACT_APP_EXTERNAL_TEXTS=external-text/default.json
+REACT_APP_EXTERNAL_TEXTS=external-text/default.yaml
