--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "js-yaml": "^3.13.1",
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
