Add inactive rules show/hide button

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -132,7 +132,11 @@ impacts:
       In the table below, active rules have a white background;
       inactive rules have a grey background.
 
+
     table:
+      showInactiveRulesButton:
+        true: Hide Inactive Rules
+        false: Show Inactive Rules
       heading:
         ruleId: Rule ID
         condition: Condition
