--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "leaflet": "^1.4.0",
     "lodash": "^4.17.11",
     "pcic-react-components": "git+https://git@github.com/pacificclimate/pcic-react-components.git#3.0.0",
+    "pcic-react-external-text": "git+https://git@github.com/pacificclimate/pcic-react-external-text.git#1.0.0",
     "pcic-react-leaflet-components": "git+https://git@github.com/pacificclimate/pcic-react-leaflet-components.git",
     "proj4": "^2.5.0",
     "proj4leaflet": "^1.0.2",
