--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
     "react-leaflet": "^2.1.4",
+    "react-loader": "^2.4.5",
     "react-markdown": "^4.0.6",
     "react-scripts": "^2.1.8",
     "react-select": "^2.3.0",
