--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/pcex/api
 REACT_APP_ENSEMBLE_NAME=p2a_files
 REACT_APP_MODEL_ID=PCIC12
+REACT_APP_EMISSIONS_SCENARIO=historical,rcp85
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
-REACT_APP_NCWMS_URL=http://www.plan2adapt.ca/ncWMS/wms
+REACT_APP_NCWMS_URL=https://services.pacificclimate.org/pcex/ncwms
 REACT_APP_EXTERNAL_TEXT=external-text/default.yaml
