--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REACT_APP_NCWMS_URL=https://services.pacificclimate.org/pcex/ncwms
 REACT_APP_EXTERNAL_TEXT=external-text/default.yaml
 REACT_APP_REGIONS_SERVICE_URL=http://docker-dev01.pcic.uvic.ca:30123/geoserver/bc_regions/ows
 REACT_APP_RULES_ENGINE_URL=http://docker-dev02.pcic.uvic.ca:30666
+REACT_APP_SUMMARY_STATISTICS_URL=foo
