Filter metadata on multiple emissions scenarios

--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@ REACT_APP_REGIONS_SERVICE_URL=http://docker-dev01.pcic.uvic.ca:30123/geoserver/b
 REACT_APP_RULES_ENGINE_URL=http://docker-dev02.pcic.uvic.ca:30666
 REACT_APP_ENSEMBLE_NAME=p2a_files
 REACT_APP_MODEL_ID=PCIC12
-REACT_APP_EMISSIONS_SCENARIO=historical,rcp85
+REACT_APP_EMISSIONS_SCENARIOS=historical,rcp85;historical, rcp85
 REACT_APP_EXTERNAL_TEXT=external-text/default.yaml
