--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -187,6 +187,43 @@ maps:
     title: "### Historical: ${$$.fragments.period}"
   projected:
     title: "### Projected: ${$$.fragments.period}"
+  displaySpec:
+    fallback:
+      palette: seq-Oranges
+      range:
+        min: -50
+        max: 50
+      ticks: [-50, 0, 50]
+    gdd:
+      palette: seq-Oranges
+      range:
+        min: 0
+        max: 4000
+      ticks: [0, 1000, 2000, 3000, 4000]
+    hdd:
+      palette: seq-Oranges
+      range:
+        min: 0
+        max: 10000
+      ticks: [0, 2000, 4000, 6000, 8000, 10000]
+    pr:
+      palette: seq-Greens
+      range:
+        min: 0
+        max: 20
+      ticks: [0, 5, 10, 15, 20]
+    tasmax:
+      palette: div-BuRd
+      range:
+        min: -30
+        max: 40
+      ticks: [-30, -20, -10, 0, 10, 20, 30, 40]
+    tasmin:
+      palette: div-BuRd
+      range:
+        min: -40
+        max: 30
+      ticks: [-40, -30, -20, -10, 0, 10, 20, 30]
 
 graph:
   tab: Graph
