--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -215,15 +215,15 @@ maps:
     tasmax:
       palette: div-BuRd
       range:
-        min: -30
+        min: -40
         max: 40
-      ticks: [-30, -20, -10, 0, 10, 20, 30, 40]
+      ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
     tasmin:
       palette: div-BuRd
       range:
         min: -40
-        max: 30
-      ticks: [-40, -30, -20, -10, 0, 10, 20, 30]
+        max: 40
+      ticks: [-40, -30, -20, -10, 0, 10, 20, 30, 40]
 
 graph:
   tab: Graph
