--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/pcex/api
-REACT_APP_SUMMARY_STATISTICS_URL=fake
+#REACT_APP_CE_BACKEND_URL=https://services.pacificclimate.org/pcex/api
+REACT_APP_CE_BACKEND_URL=http://docker-dev01.pcic.uvic.ca:30061/api
+#REACT_APP_SUMMARY_STATISTICS_URL=fake
+REACT_APP_SUMMARY_STATISTICS_URL=http://docker-dev01.pcic.uvic.ca:30061/api
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
 REACT_APP_NCWMS_URL=https://services.pacificclimate.org/pcex/ncwms
 REACT_APP_REGIONS_SERVICE_URL=http://docker-dev01.pcic.uvic.ca:30123/geoserver/bc_regions/ows
@@ -8,3 +10,5 @@ REACT_APP_ENSEMBLE_NAME=p2a_files
 REACT_APP_MODEL_ID=PCIC12
 REACT_APP_EMISSIONS_SCENARIOS=historical,rcp85;historical, rcp85
 REACT_APP_EXTERNAL_TEXT=external-text/default.yaml
+
+
