--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REACT_APP_CE_BACKEND_URL=http://docker-dev01.pcic.uvic.ca:30061/api
 REACT_APP_SUMMARY_STATISTICS_URL=http://docker-dev01.pcic.uvic.ca:30061/api
 REACT_APP_TILECACHE_URL=https://b.tile.pacificclimate.org/tilecache/tilecache.py
 REACT_APP_NCWMS_URL=https://services.pacificclimate.org/pcex/ncwms
-REACT_APP_REGIONS_SERVICE_URL=http://docker-dev01.pcic.uvic.ca:30123/geoserver/bc_regions/ows
+REACT_APP_REGIONS_SERVICE_URL=https://services.pacificclimate.org/plan2adapt/geoserver/bc_regions/ows
 REACT_APP_RULES_ENGINE_URL=http://docker-dev02.pcic.uvic.ca:30666
 REACT_APP_ENSEMBLE_NAME=p2a_files
 REACT_APP_MODEL_ID=PCIC12
