Update References tab text

--- a/public/external-text/default.yaml
+++ b/public/external-text/default.yaml
@@ -304,6 +304,9 @@ references:
   disabled: false
   tab: References
   content: |
+    **NOTE:** Some of references are out of date for the present version of the
+    application and will be updated shortly.
+
     British Columbia Ministry of Water, Land and Air Protection. 2002. _Indicators of Climate Change for British Columbia 2002_. Victoria, BC. 48 pp.
 
     Bronaugh, D., T. Murdock. In review. _Developing Improved Degree-Day Regressions_. Pacific Climate Impacts Consortium report; 33 pp.
